# interop

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  DIVERGENCES.md  Dockerfile  README.md  SECURITY-INVARIANTS.md  SECURITY.md  rust-toolchain.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  INTEROP.md  REPRODUCIBLE_BUILDS.md  vc-01-vector-report.md
docs/mimi/: CONFORMANCE.md
examples/: virtual_clients_demo.rs
mimi-bot/: Cargo.toml
mimi-bot/src/: config.rs  identity.rs  local_channel_client.rs  main.rs  mls_bot.rs  ratelimit.rs
mimi-hub/: Cargo.toml  README.md
mimi-hub/src/: http.rs  lib.rs  main.rs  store.rs  tls.rs
mimi-hubd/: Cargo.toml  README.md
mimi-hubd/debian/: mimi-hubd.env.example  mimi-hubd.service  mimi-hubd.toml.example  postinst  postrm
mimi-hubd/src/: config.rs  http.rs  lib.rs  main.rs  store.rs  tls.rs
scripts/: _tell_scan_denylist.py.example  check_commit_message_hygiene.py  check_manifest_purity.py  check_one_way_dep.py  check_public_comment_hygiene.py  check_tell_scan.py  oss-external-pins.txt  oss-public-token-manifest.txt
src/: commit_wire.rs  consent.rs  content.rs  gate.rs  lib.rs  participant_list.rs  protocol_wire.rs  room_policy.rs  spec_capability_proof.rs  uri.rs  virtual_clients.rs
tests/: vc_vectors_replay.rs
tests/vectors/: vc-01-vectors.json
tools/vc-vectors-xcheck/: Cargo.toml  README.md  openmls-extraction.patch
tools/vc-vectors-xcheck/src/: main.rs
