[package]
name = "vc-vectors-xcheck"
version = "0.0.0"
edition = "2021"
publish = false
license = "Apache-2.0"
description = "Cross-implementation vector generator for draft-ietf-mls-virtual-clients-01 §5.2/§5.6.1-.3. Not a workspace member of mimi-core, see README.md: it depends on openmls-main (git-pinned, unreleased virtual-clients-draft feature), which the repo root's manifest-purity guard (crates.io-only) forbids for the audited library itself."

[dependencies]
mimi-core = { path = "../.." }
openmls_rust_crypto = "0.5.1"
openmls_traits = "0.5.0"
# openmls-main pinned to the exact commit docs/vc-01-vector-report.md cites. Aliased via `package =`
# so it coexists with the crates.io 0.5.1 pull mimi-core itself uses (Cargo allows the same crate
# under two source origins when renamed).
openmls_rust_crypto_vc = { package = "openmls_rust_crypto", git = "https://github.com/openmls/openmls", rev = "f3040aaac59b8c72a9d4e0b7970eefcde9c1dd11", features = ["virtual-clients-draft"] }
openmls_traits_vc = { package = "openmls_traits", git = "https://github.com/openmls/openmls", rev = "f3040aaac59b8c72a9d4e0b7970eefcde9c1dd11", features = ["virtual-clients-draft"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
sha2 = "0.10"
